# aurora-rs

./: Cargo.toml  README.md  flash.sh  main.rs  memory.x  usb.rs
.cargo/: config.toml
.github/workflows/: ci_checks.yml
src/: communication.rs  key_codes.rs  keyboard.rs  layout.rs  main.rs  main2.rs  sk6812.rs
src/communication/: serial.rs  transaction.rs  transport.rs
src/keyboard/: key_event.rs  key_matrix.rs  keyboard_state.rs
